<resources>
    <string name="app_name">MyWeight</string>
    <string name="weight">Button</string>
    <string name="minus_weight">-</string>
    <string name="weight_text">体重：</string>
    <string name="plus_weight">+</string>
    <string name="date_text">日付：</string>
    <string name="setting">setting</string>
    <string name="save">save</string>
    <string name="MainFragmentDialog">MainFragmentDialog</string>
    <string name="woman_text">女性</string>
    <string name="man_text">男性</string>
    <string name="sexuality_text">性別：</string>
    <string name="height_text">身長：</string>
</resources>
